# Projeto-CG

./: CGProject.vcxproj  CGProject.vcxproj.filters  CMakeLists.txt
3d/: plane.3d  sphere.3d
Engine/: Ponto.cpp  Ponto.h  Shape.cpp  Shape.h  box.xml  boxcD.xml  cone.xml  engine.cpp  main.cpp  plane.xml  sphere.xml
Fase1/: CMakeLists.txt
Fase1/3d/: box.3d  torus.3d
Fase1/Engine/: main.cpp  torus.xml
Fase1/Generator/: box.cpp  cone.cpp  generator.cpp
Fase2/: CMakeLists.txt
Fase2/3d/: boxcD.3d  sphere.3d  torus.3d  torus2.3d
Fase2/Engine/: Cor.h  Group.cpp  Group.h  Parse.cpp  Parse.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Transformation.cpp  Transformation.h  Translate.cpp  Translate.h  cone.xml  main.cpp  rotate.h  sistema.xml  sphere.xml  tinyxml2.cpp  tinyxml2.h
Fase2/Generator/: cone.h  generator.cpp  plano.h  sphere.cpp  torus.cpp  torus.h
Fase3/: CMakeLists.txt
Fase3/3d/: sphere.3d  torus.3d
Fase3/Engine/: Group.cpp  Group.h  Parse.cpp  Parse.h  Ponto.h  Rotate.h  Transformation.cpp  Translate.cpp  Translate.h  main.cpp  sistema.xml
Fase3/Generator/: generator.cpp  patch.cpp  patch.h  plano.cpp  sphere.cpp  sphere.h  torus.cpp
Fase4/: CMakeLists.txt
Fase4/3d/: plano.3d  sphere.3d  teapot.3d  torus.3d  torus3.3d
Fase4/Engine/: Cor.cpp  Cor.h  Group.cpp  Group.h  Material.cpp  Material.h  Parse.cpp  Parse.h  Ponto.cpp  Ponto.h  Rotate.cpp  Transformation.cpp  Transformation.h  Translate.cpp  main.cpp  sistema.xml  (+1 more)
Generate/: cone.cpp  generate.cpp  main.cpp  sphere.cpp
Generator/: box.cpp  box.h  generator.cpp  sphere.cpp
(+5 files in other folders)
